[gd_scene load_steps=12 format=2]

[ext_resource path="res://imagens/column1.png" type="Texture" id=1]
[ext_resource path="res://imagens/column2.png" type="Texture" id=2]
[ext_resource path="res://Script/Barreira_Particula.gd" type="Script" id=3]
[ext_resource path="res://Script/Barreira.gd" type="Script" id=4]
[ext_resource path="res://Script/Barreira_Luz.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1107.63, 21.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 470.75, 25.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 370.5, 18.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 133, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 584, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 708.5, 17 )

[node name="Barreira" type="Node2D"]
position = Vector2( 2, 6 )
script = ExtResource( 4 )

[node name="Barreira_Particula" type="Area2D" parent="."]
position = Vector2( 2, -296 )
script = ExtResource( 3 )

[node name="barreiraDireita" type="Sprite" parent="Barreira_Particula"]
position = Vector2( 1153, 237 )
rotation = 1.5708
scale = Vector2( 1, 1.7056 )
texture = ExtResource( 2 )

[node name="barreiraEsquerda" type="Sprite" parent="Barreira_Particula"]
position = Vector2( -25.58, 240 )
rotation = 1.5708
scale = Vector2( 1, 1.5286 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Barreira_Particula"]
position = Vector2( 280, 235 )
scale = Vector2( 14.7, 2.6 )

[node name="hitBox" type="CollisionShape2D" parent="Barreira_Particula"]
position = Vector2( 561, 240 )
shape = SubResource( 1 )

[node name="Morte" type="Area2D" parent="Barreira_Particula"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira_Particula/Morte"]
position = Vector2( 1122.25, 235.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barreira_Particula/Morte"]
position = Vector2( 58.5, 240.75 )
shape = SubResource( 4 )

[node name="Pontuacao" type="Area2D" parent="Barreira_Particula"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira_Particula/Pontuacao"]
position = Vector2( 533, 225 )
shape = SubResource( 5 )

[node name="Barreira_Luz" type="Area2D" parent="."]
position = Vector2( -270, -271 )
script = ExtResource( 5 )

[node name="hitBox" type="CollisionShape2D" parent="Barreira_Luz"]
position = Vector2( 809, 220 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Barreira_Luz"]
position = Vector2( 733, 219 )
scale = Vector2( 24.7, 2.3 )

[node name="Pontuacao" type="Area2D" parent="Barreira_Luz"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira_Luz/Pontuacao"]
position = Vector2( 794, 202 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Barreira_Luz"]
margin_left = 44.0
margin_top = 198.0
margin_right = 1634.0
margin_bottom = 244.0
color = Color( 0, 0, 0, 1 )

[connection signal="area_entered" from="Barreira_Particula" to="." method="_on_Barreira_Particula_area_entered"]
[connection signal="screen_exited" from="Barreira_Particula/VisibilityNotifier2D" to="Barreira_Particula" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Barreira_Luz" to="." method="_on_Barreira_Luz_area_entered"]
[connection signal="screen_exited" from="Barreira_Luz/VisibilityNotifier2D" to="Barreira_Luz" method="_on_VisibilityNotifier2D_screen_exited"]
